src/objects/echosign_dev1__Sign_Workflow__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Workflow_Content__c</fullName>
        <description>Sign Workflow Content in JSON String Format</description>
        <inlineHelpText>Sign Workflow Content in JSON String Format</inlineHelpText>
        <label>Workflow Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Workflow_Created_Time__c</fullName>
        <description>Sign Workflow Creation Time and Date</description>
        <inlineHelpText>Sign Workflow Creation Time and Date</inlineHelpText>
        <label>Workflow Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Workflow_Display_Name__c</fullName>
        <description>Workflow Display Name</description>
        <inlineHelpText>Workflow Display Name</inlineHelpText>
        <label>Workflow Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Workflow_Id__c</fullName>
        <description>Sign Workflow Id</description>
        <inlineHelpText>Sign Workflow Id</inlineHelpText>
        <label>Workflow Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Workflow_Modified_Time__c</fullName>
        <description>Sign Workflow Modification Time and Date</description>
        <inlineHelpText>Sign Workflow Modification Time and Date</inlineHelpText>
        <label>Workflow Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Workflow_Status__c</fullName>
        <description>Sign Workflow Status</description>
        <inlineHelpText>Sign Workflow Status</inlineHelpText>
        <label>Workflow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                    <default>true</default>
                    <label>ACTIVE</label>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
                <value>
                    <fullName>HIDDEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sign Workflow</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Sign Workflow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>